2001-02-06  Robin * Slomkowski  <rslomkow@eazel.com>
	
	THIS IS THE gnome-vfs-1 branch

2001-02-06  Pavel Cisler  <pavel@eazel.com>

	reviewed by: Mike Fleming <mfleming@eazel.com>

	Fix 3451 (Loading a directory with a circular symbolic link
		  causes the load to be interrupted)
	
	Fix 6221 (Nautilus shows only 6 of the 56 items in my home directory)
	
	* libgnomevfs/gnome-vfs-types.h:
	* modules/file-method.c: (get_stat_info),
	(get_stat_info_from_handle), (read_directory), (do_get_file_info),
	(do_get_file_info_from_handle):
	Make erors while obtaining stat info and mime type not interrupt
	directory loading.
	Make do_get_file_info not give up as easily when dealing with
	recursive links.

	* libgnomevfs/gnome-vfs-xfer.c: (gnome_vfs_xfer_empty_directories):
	Fix a problem where an error in directory emptying preflight or
	emptying itself would cause the operation to stop rather than
	continue with deleting the remaining items. 
	
2001-02-06  Gene Z. Ragan  <gzr@eazel.com>

	Fixed bug 6258, Determine initial capplet sort column
	
	* mime-type-capplet/nautilus-mime-type-capplet.c:
	(init_mime_capplet):
	Sort based on first column in list.

2001-02-06  Maciej Stachowiak  <mjs@eazel.com>

	* Makefile.am, .cvsignore: Updated for new xml-i18n-tools.

2001-02-05  Pavel Cisler  <pavel@eazel.com>

	reviewed by: Seth Nickell  <seth@eazel.com>

	Fix 5930 (Copy dialog often shows "1" as total number of
		  fields in operation)
	Fix a ton of problems with the progress calculation.
	
	* libgnomevfs/gnome-vfs-xfer.c: (remove_file), (remove_directory),
	(count_each_file_size_one), (gnome_vfs_xfer_empty_directories),
	(gnome_vfs_xfer_delete_items), (gnome_vfs_xfer_uri_internal),
	(gnome_vfs_xfer_private):
	When removing during a copy conflict, do not update the progress.
	Store and retireve the preflight results when doing a conflict
	handling during copy.
	Properly calculate removed file size -- use a nominal per-file
	overhead rather than the file size.